test/fail/integration/_fail_grammar_expr_funct_call_1.hs
x :: [Int] -> Int
x y = y !! 0
y :: Int
y = x alj lsk
main = print "hello"